[package]
name = "yawn"
version = "0.1.2"
edition = "2021"
description = "An alternative to sleep that allows specifying a timestamp and exit code."
license = "MIT"
homepage = "https://github.com/cfal/yawn/"
repository = "https://github.com/cfal/yawn/"
readme = "README.md"
keywords = ["sleep", "chrono", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "*"
env_logger = "*"
log = "*"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
