[package]
name = "yawn"
version = "0.1.3"
edition = "2021"
description = "An alternative to sleep that allows specifying a timestamp and exit code."
license = "MIT"
homepage = "https://github.com/cfal/yawn/"
repository = "https://github.com/cfal/yawn/"
readme = "README.md"
keywords = ["sleep", "chrono", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
